--- a/detailPet.html
+++ b/detailPet.html
@@ -59,86 +59,85 @@
             </li>
         </ul>
     </nav>
-    
+
     <main>
-        <div class="pet-view justify-content-center text-center d-lg- py-5">
-            <div class="detail-pet justify-content-center d-lg-grid align-items-center">
-                <div class="image-pet d-flex flex-column align-items-center">
-                    <!-- <img onclick="goBack()" src="assets/svg/arrowleft.svg" alt="" class="arrow-left" style="width: 2.5em;"> -->
-                    <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="pet-image">
+        <div class="detail-pet d-flex justify-content-center">
+            <div class="detail-top pt-1">
+            </div>
+            <div class="pet-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-10">
+                <div class="detail-top pt-1">
+                    <img src="assets/img/userImage.jpg" alt="" class="pet-image" style="width: 25em;">
                 </div>
-                <div class="pet-text rectangle-background py-3">
-                    <div class="info-pet">
-                        <h2 class="pet-name josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
-                        <div class="d-flex flex-column">
-                            <div class="main-info d-flex flex-wrap justify-content-between px-4 mx-5">
-                                <div class="age">
-                                    <p class="josefinsans-chetwode-blue-18px">EDAD</p>
-                                    <p class="pet-age">8 meses</p>
-                                </div>
-                                <div class="size">
-                                    <p class="josefinsans-chetwode-blue-18px">TALLA</p>
-                                    <p class="pet-size">Mediana</p>
-                                </div>
-                                <div class="sex">
-                                    <p class="josefinsans-chetwode-blue-18px">SEXO</p>
-                                    <p class="pet-gender">Macho</p>
-                                </div>
+                <div class="info-pet d-flex flex-column">
+                    <h2 class="pet-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
+                    <div class="d-flex flex-column">
+                        <div class="main-info d-flex flex-wrap justify-content-between px-5 mx-5">
+                            <div class="age">
+                                <p class="josefinsans-chetwode-blue-18px">EDAD</p>
+                                <p class="pet-age">8 meses</p>
                             </div>
-                            <div class="secondary-info d-flex flex-column justify-content-between px-4 mx-5">
-                                <div>
-                                    <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
-                                    <p>Coyoacán</p>
-                                </div>
-                                <div>
-                                    <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                    <p class="character-pet">Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado
-                                        y con
-                                        vacunas al día.</p>
-                                </div>
-                                <div>
-                                    <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
-                                    <p class="story-pet ">Gnocchi fue rescatado de la calle.</p>
-                                </div>
-                                <div>
-                                    <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
-                                    <p class="special-needs">Espacios amplios.</p>
-                                </div>
+                            <div class="size">
+                                <p class="josefinsans-chetwode-blue-18px">TALLA</p>
+                                <p class="pet-size">Mediana</p>
+                            </div>
+                            <div class="sex">
+                                <p class="josefinsans-chetwode-blue-18px">SEXO</p>
+                                <p class="pet-gender">Macho</p>
+                            </div>
+                        </div>
+                        <div class="secondary-info d-flex flex-column justify-content-between px-5 mx-5">
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">UBICACIÓN</p>
+                                <p>Coyoacán</p>
+                            </div>
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
+                                <p class="character-pet">Gnocchi es muy juguetón, convive con otros perros. Está ciego
+                                    de un ojo. Esterilizado
+                                    y con
+                                    vacunas al día.</p>
+                            </div>
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
+                                <p class="story-pet ">Gnocchi fue rescatado de la calle.</p>
+                            </div>
+                            <div>
+                                <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
+                                <p class="special-needs">Espacios amplios.</p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <br>
-            <div class="pet-actions">
-                <div class="shelter-text rectangle-background col-lg-10">
-                    <div class="info-shelter flex-column pt-5">
-                        <p class="px-4 josefinsans-chetwode-blue-18px">
-                            REFUGIO
-                        </p>
-                        <a href="profileShelter.html?association_id" class="d-inline-flex container flex-row">
-                            <img src="assets/img/shelterImage.jpg" alt=""
-                                style="width: 6em; height: 6em;">
-                            <div class="col-12 text-shelter">
-                                <p class= "shelter-name"></p>
-                                <p class="d-flex flex-wrap">Felipe Carrillo puerto #400, Alberto Zamora, <br> Coyoacán, 04000, CDMX.</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="user-actions py-3 mb-5 px-3 d-inline-flex">
+                <div class="d-flex justify-content-center pb-5">
+                    <div class=" adopt-form user-actions d-inline-flex">
                         <form action="https://www.paypal.com/donate" method="post" target="_top"
                             class="button-donation">
                             <input type="hidden" name="business" value="paw.chontli@gmail.com" />
                             <input type="hidden" name="item_name" value="Pawchontli" />
                             <input type="hidden" name="currency_code" value="MXN" />
                             <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
-                                title="PayPal - The safer, easier way to pay online!"
-                                alt="Donate with PayPal button" style="width: 10em;" />
+                                title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"
+                                style="width: 10em;" />
                             <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
                                 height="1" />
                         </form>
                         <a href="adoptionForm.html">
                             <button class="button-main">Adoptar</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center shelter-button">
+                    <div class="info-shelter py-5 d-flex flex-column">
+                        <p class="px-4 josefinsans-chetwode-blue-18px">
+                            REFUGIO
+                        </p>
+                        <a href=""
+                            class="d-inline-flex container flex-row shelter-button">
+                            <img src="" alt="" style="width: 6em; height: 6em;">
+                            <div class="col-12 text-shelter">
+                                <p class="shelter-name"></p>
+                                <p class="shelter-address"></p>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -200,4 +199,5 @@
     <script src="js/detailPet.js"></script>
 
 </body>
+
 </html>
