--- a/detailPetShelter.html
+++ b/detailPetShelter.html
@@ -63,31 +63,31 @@
         </ul>
     </nav>
 
+
     <main>
-        <div class="detail-pet">
-            <div class="image-pet d-flex justify-content-center align-items-center flex-column pt-1">
-                <img onclick="goBack()" src="assets/svg/arrowleft.svg" alt="" class="arrow-left" style="width: 2.5em;">
-                <img src="assets/img/pexels-rk-jajoria-1189673.jpg" alt="" class="container-fluid">
-                <a href="updatePet.html">
-                    <img src="assets/svg/editwhite.svg" alt="" class="edit" style="width: 3em;">
-                </a>
+        <div class="detail-pet d-flex justify-content-center">
+            <div class="detail-top pt-1">
             </div>
-            <div class="pet-text rectangle-background">
-                <div class="info-pet">
-                    <h2 class="josefinsans-normal-black-30px d-flex justify-content-between">Gnocchi</h2>
+            <div class="pet-text rectangle-background col-lg-6 col-md-7 col-sm-9 col-10">
+                <div class="detail-top pt-1">
+                    <img src="assets/img/userImage.jpg" alt="" class="pet-image" style="width: 25em;">
+                </div>
+                <div class="info-pet d-flex flex-column">
+                    <h2 class="pet-name josefinsans-normal-black-30px d-flex justify-content-center pb-3"></h2>
+                    <img src="assets/svg/edit.svg" alt="" style="width: 2.5em;" class="edit"> 
                     <div class="d-flex flex-column">
                         <div class="main-info d-flex flex-wrap justify-content-between px-5 mx-5">
                             <div class="age">
                                 <p class="josefinsans-chetwode-blue-18px">EDAD</p>
-                                <p>8 meses</p>
+                                <p class="pet-age">8 meses</p>
                             </div>
                             <div class="size">
                                 <p class="josefinsans-chetwode-blue-18px">TALLA</p>
-                                <p>Mediana</p>
+                                <p class="pet-size">Mediana</p>
                             </div>
                             <div class="sex">
                                 <p class="josefinsans-chetwode-blue-18px">SEXO</p>
-                                <p>Macho</p>
+                                <p class="pet-gender">Macho</p>
                             </div>
                         </div>
                         <div class="secondary-info d-flex flex-column justify-content-between px-5 mx-5">
@@ -97,19 +97,53 @@
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">DETALLES</p>
-                                <p>Gnocchi es muy juguetón, convive con otros perros. Está ciego de un ojo. Esterilizado
+                                <p class="character-pet">Gnocchi es muy juguetón, convive con otros perros. Está ciego
+                                    de un ojo. Esterilizado
                                     y con
                                     vacunas al día.</p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">HISTORIA</p>
-                                <p>Gnocchi fue rescatado de la calle.</p>
+                                <p class="story-pet ">Gnocchi fue rescatado de la calle.</p>
                             </div>
                             <div>
                                 <p class="josefinsans-chetwode-blue-18px">NECESIDADES ESPECIALES</p>
-                                <p>Espacios amplios.</p>
+                                <p class="special-needs">Espacios amplios.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center pb-5">
+                    <div class=" adopt-form user-actions d-inline-flex">
+                        <form action="https://www.paypal.com/donate" method="post" target="_top"
+                            class="button-donation">
+                            <input type="hidden" name="business" value="paw.chontli@gmail.com" />
+                            <input type="hidden" name="item_name" value="Pawchontli" />
+                            <input type="hidden" name="currency_code" value="MXN" />
+                            <input type="image" src="assets/svg/button-sponsor.svg" border="0" name="submit style"
+                                title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"
+                                style="width: 10em;" />
+                            <img alt="" border="0" src="https://www.paypal.com/en_MX/i/scr/pixel.gif" width="1"
+                                height="1" />
+                        </form>
+                        <a href="adoptionForm.html">
+                            <button class="button-main">Adoptar</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center shelter-button">
+                    <div class="info-shelter py-5 d-flex flex-column">
+                        <p class="px-4 josefinsans-chetwode-blue-18px">
+                            REFUGIO
+                        </p>
+                        <a href=""
+                            class="d-inline-flex container flex-row shelter-button">
+                            <img src="" alt="" style="width: 6em; height: 6em;">
+                            <div class="col-12 text-shelter">
+                                <p class="shelter-name"></p>
+                                <p class="shelter-address"></p>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
